add nedded html

--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,15 @@
     </header>
     <main>
       <div class="container">
-        The Content
+        <div>
+          <div>
+            <label for="file">Choose a file to upload:</label>
+            <input type="file" id="file" name="file" />
+          </div>
+          <div>
+            <button>Upload</button>
+          </div>
+        </div>
       </div>
     </main>
   </body>
