--- a/views/index.html
+++ b/views/index.html
@@ -13,21 +13,17 @@
     />
   </head>
 
-  <body>
-    <header>
-      <h1>
-        File Metadata
-      </h1>
-    </header>
+  <body>   
     <main>
       <div class="container">
-        <div>
-          <div>
+          <div id="file-group">
             <label for="file">Choose a file to upload:</label>
             <input type="file" id="file" name="file" />
           </div>
           <div>
+
             <button>Upload</button>
+          </div>
           </div>
         </div>
       </div>
